# sistema-de-ponto

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  Procfile  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_refresh_tokens.py  003_work_schedules_refactor.py  004_facial_enrollment_photo.py  005_employee_terminal_code.py  006_must_change_password.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: admin.py  attendance.py  auth.py  devices.py  employees.py  hour_bank.py  justifications.py  reports.py  schedules.py
backend/app/core/: config.py  exceptions.py  logging.py  ntp.py  security.py
backend/app/domain/attendance/: exceptions.py  models.py  repository.py  schemas.py  service.py
backend/app/domain/auth/: models.py  repository.py
backend/app/domain/devices/: exceptions.py  models.py  repository.py  schemas.py  service.py
backend/app/domain/employees/: exceptions.py  models.py  repository.py  schemas.py  service.py
backend/app/domain/facial/: encoder.py  encryption.py  models.py  repository.py  service.py  verifier.py
backend/app/domain/hour_bank/: calculator.py  models.py  repository.py  schemas.py  service.py
backend/app/domain/justifications/: exceptions.py  models.py  repository.py  schemas.py  service.py
backend/app/domain/schedules/: exceptions.py  models.py  repository.py  schemas.py  service.py
backend/app/infrastructure/: database.py  email.py  redis.py  supabase.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: hour_bank.py  notifications.py  reports.py
backend/scripts/: seed_dev.py
backend/tests/: conftest.py
backend/tests/unit/: conftest.py
backend/tests/unit/domain/: test_attendance_service.py  test_facial_encryption.py  test_facial_verifier.py  test_hour_bank_calculator.py  test_schedules_service.py  test_security.py
frontend/: .env.example  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  wrangler.toml
frontend/scripts/: download-models.sh
frontend/src/: index.css  main.tsx
frontend/src/app/: providers.tsx  router.tsx
supabase/migrations/: 20260401000000_initial_schema.sql
(+45 files in other folders)
