[project]
name = "sistema-ponto-backend"
version = "0.1.0"
description = "Sistema de Ponto Eletrônico com Reconhecimento Facial"
requires-python = ">=3.12"

dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    # ORM / DB
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    # Supabase
    "supabase>=2.10.0",
    # Auth / Segurança
    "pyjwt>=2.10.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.0,<4.0.0",              # passlib 1.7.4 não suporta bcrypt >= 4.x
    "cryptography>=43.0.0",       # AES-256-GCM para embeddings
    "slowapi>=0.1.9",              # rate limiting
    # Validação
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.20",         # form data no FastAPI (login)
    "email-validator>=2.0.0",           # pydantic EmailStr
    # Filas
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    # Reconhecimento facial via OpenCV DNN (FaceDetectorYN + FaceRecognizerSF)
    # Modelos ONNX embutidos na imagem Docker — sem TensorFlow, sem compilação
    "opencv-python-headless>=4.10.0",
    # NTP (Portaria 671)
    "ntplib>=0.4.0",
    # Logging
    "structlog>=24.4.0",
    # Monitoramento
    "sentry-sdk[fastapi]>=2.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "factory-boy>=3.3.1",
    "httpx>=0.27.0",               # AsyncClient para testes
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-passlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B", "A"]
ignore = ["ANN101", "ANN102", "S101"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
fail_under = 80

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pydantic[email]>=2.12.5",
    "python-multipart>=0.0.22",
]
